c4prj1_deck/grade.txt
Grading at Sat Jun 20 09:33:49 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:115:3: error: implicit declaration of function ‘free_cards’ [-Werror=implicit-function-declaration]
   free_cards(&temp);
   ^
deck.c: At top level:
deck.c:120:8: error: conflicting types for ‘free_cards’ [-Werror]
   void free_cards(deck_t * deck){
        ^
deck.c:115:3: note: previous implicit declaration of ‘free_cards’ was here
   free_cards(&temp);
   ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
